--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h3 {
 .container {
   position: relative;
   max-width: 850px;
-  margin-top: 10%;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
   background-color: none;
@@ -97,16 +97,17 @@ h3 {
   display: block;
 }
 
-.middleright {
-  width: 250px;
-  height: auto;
+.address {
   background-color: rgba(255, 255, 255, 0.7);
   border: none;
   border-radius: 5px;
-  padding: 10px;
-  margin: 10px 5px;
-  float: left;
   box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+    clear: both;
+    padding: 10px;
+    margin: 5px;
+    text-align: center;
 }
 
 .right {
@@ -340,21 +341,21 @@ table.tpaketwifi tr:nth-child(even) {
   .container {
     width: 90%;
   }
-  .left {
+  /* .left {
     width: 43%;
   }
   .middle {
     width: 43%;
     float: right;
-  }
+  } */
 
-  .right {
+  /* .right {
     clear: both;
     padding: 1% 4%;
     height: auto;
     width: auto;
     float: none;
-  }
+  } */
   .status {
     width: 90%;
     float: none;
@@ -503,4 +504,3 @@ table.tpaketwifi tr:nth-child(even) {
 .btn-buy:hover {
   background-color: var(--primary-hover);
 }
-
